backend/kubernetes/ScreenHive-Landing-Frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ScreenHive-Landing-Frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: ScreenHive-Landing-Frontend
  template:
    metadata:
      labels:
        app: ScreenHive-Landing-Frontend
    spec:
      containers:
      - name: ScreenHive-Landing-Frontend
        image: <Image>
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
---

apiVersion: v1
kind: Service
metadata:
  name: ScreenHive-Landing-Frontend
spec:
  type: NodePort
  selector:
    app: ScreenHive-Landing-Frontend
  ports:
  - port: 80
    targetPort: 80
