backend/kubernetes/ScreenHive-Websocket-Backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: websocket
spec:
  replicas: 3
  selector:
    matchLabels:
      app: websocket
  template:
    metadata:
      labels:
        app: websocket
    spec:
      containers:
      - name: websocket
        image: stearnsbq/screenhive:websocket
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
        ports:
        - containerPort: 3000
---

apiVersion: v1
kind: Service
metadata:
  name: websocket
spec:
  type: NodePort
  selector:
    app: websocket
  ports:
  - port: 80
    targetPort: 3000
