backend/kubernetes/Screenhive-Ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: screenhive-ingress
  labels:
    name: screenhive-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: www.screenhive.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: landing
            port:
              number: 80
  - host: watch.screenhive.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app
            port: 
              number: 80
  - host: api.screenhive.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: api
            port:
              number: 80
  - host: ws.screenhive.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
            service:
              name: websocket
              port:
                number: 80
